--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-  <title> Tarun's Webpge </title>
+    <title> Tarun's webpage </title>
   </head>
-<body>
-This is the start of the personal webpage
-</body>
+ <body>
+   Hi , I am Tharun (pronounced  Tah-Rune) currently studying Masters in Computer Science from San Jose State University.
+ </body>
 </html>
